--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="icon" href="img/ninja32x32.png">
     <link rel="stylesheet" href="styles.css">
     <title>Animation</title>
@@ -19,6 +20,22 @@
         <img src="img/the-batman.jpg"">
         <img src="img/black-adam.jpg"">
     </section>
-    
+    <footer>
+        <div class="footer">
+            <ul>
+                <li class="icons"> 
+                    <a href="https://www.linkedin.com/in/joseduquea/ " target="_blank" title="Follow me on Linkedin">
+                        <i class="fab fa-linkedin"></i>
+                    </a>
+                    <a href="https://github.com/joseduquea" target="_blank" title="Follow me on Git Hub">
+                        <i class="fab fa-github"></i>
+                    </a>
+                    <a href="https://twitter.com/joseduquea" target="_blank" title="Follow me on Twitter">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
